--- a/MusicApp/app/src/main/res/layout/activity_classic.xml
+++ b/MusicApp/app/src/main/res/layout/activity_classic.xml
@@ -10,7 +10,7 @@
   <LinearLayout
       android:layout_width="0dp"
       android:layout_height="0dp"
-      android:orientation="horizontal"
+      android:orientation="vertical"
       tools:context="com.example.android.miwok.MainActivity"
       tools:layout_constraintTop_creator="1"
       tools:layout_constraintRight_creator="1"
@@ -22,21 +22,39 @@
       app:layout_constraintTop_toTopOf="parent">
 
     <TextView
-        style="@style/CategoryStyle"
-        android:text="@string/classic"
-        android:layout_weight="1"/>
+        style="@style/LabelTextView"
+        android:text="@string/label_classic_activity"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+      <TextView
+          android:id="@+id/textView"
+          style="@style/CategoryStyle"
+          android:layout_width="0dp"
+          android:layout_weight="2"
+          android:text="@string/classic"/>
+
+      <TextView
+          style="@style/MusicType"
+          android:text="@string/buy"
+          android:layout_width="0dp"
+          android:layout_weight="1"/>
+
+      <TextView
+          android:id="@+id/classicBuy"
+          style="@style/MusicType"
+          android:layout_width="0dp"
+          android:layout_weight="1"
+          android:text="@string/play"/>
+
+    </LinearLayout>
 
     <TextView
-        android:id="@+id/classicBuy"
-        style="@style/MusicType"
-        android:text="@string/buy"
-        android:layout_weight="2"/>
-
-    <TextView
-        style="@style/MusicType"
-        android:text="@string/play"
-        android:layout_weight="2"/>
-
+        style="@style/DetailTextView"
+        android:text="@string/classic_activity_detail"/>
 
   </LinearLayout>
 
