--- a/MusicApp/app/src/main/res/layout/activity_rock.xml
+++ b/MusicApp/app/src/main/res/layout/activity_rock.xml
@@ -10,7 +10,7 @@
   <LinearLayout
       android:layout_width="0dp"
       android:layout_height="0dp"
-      android:orientation="horizontal"
+      android:orientation="vertical"
       tools:context="com.example.android.miwok.MainActivity"
       tools:layout_constraintTop_creator="1"
       tools:layout_constraintRight_creator="1"
@@ -22,22 +22,35 @@
       app:layout_constraintTop_toTopOf="parent">
 
     <TextView
+        style="@style/LabelTextView"
+        android:text="@string/label_rock_activity"/>
+
+    <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:orientation="horizontal">
+
+      <TextView
         style="@style/CategoryStyle"
         android:text="@string/rock"
         android:layout_weight="1"/>
 
-    <TextView
-        android:id="@+id/rockBuy"
+      <TextView
         style="@style/MusicType"
         android:text="@string/buy"
         android:layout_weight="2"/>
 
-    <TextView
+      <TextView
+        android:id="@+id/rockBuy"
         style="@style/MusicType"
         android:text="@string/play"
         android:layout_weight="2"/>
 
+    </LinearLayout>
 
+    <TextView
+        style="@style/LabelTextView"
+        android:text="@string/rock_activity_detail"/>
   </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
