--- a/MusicApp/app/src/main/res/values/styles.xml
+++ b/MusicApp/app/src/main/res/values/styles.xml
@@ -16,7 +16,6 @@
     <item name="android:textColor">@android:color/white</item>
     <item name="android:textStyle">bold</item>
     <item name="android:background">@color/colorAccent</item>
-    <item name="android:layout_marginBottom">2dp</item>
     <item name="android:textAppearance">?android:textAppearanceMedium</item>
   </style>
 
@@ -27,7 +26,29 @@
     <item name="android:padding">16dp</item>
     <item name="android:textColor">@android:color/white</item>
     <item name="android:textStyle">bold</item>
-    <item name="android:background">@android:color/darker_gray</item>
+    <item name="android:background">@color/colorAccent</item>
+    <item name="android:textAppearance">?android:textAppearanceMedium</item>
+  </style>
+
+  <style name="LabelTextView">
+    <item name="android:layout_width">match_parent</item>
+    <item name="android:layout_height">@dimen/list_item_height</item>
+    <item name="android:gravity">center_vertical</item>
+    <item name="android:padding">16dp</item>
+    <item name="android:textColor">@android:color/darker_gray</item>
+    <item name="android:textStyle">bold</item>
+    <item name="android:background">@android:color/white</item>
+    <item name="android:textAppearance">?android:textAppearanceMedium</item>
+  </style>
+
+  <style name="DetailTextView">
+    <item name="android:layout_width">match_parent</item>
+    <item name="android:layout_height">wrap_content</item>
+    <item name="android:gravity">center_vertical</item>
+    <item name="android:padding">8dp</item>
+    <item name="android:textColor">@android:color/darker_gray</item>
+    <item name="android:textStyle">bold</item>
+    <item name="android:background">@android:color/white</item>
     <item name="android:textAppearance">?android:textAppearanceMedium</item>
   </style>
 
